<resources>
    <string name="app_name">Wizzard</string>
    <string name="Intro">Weelkome to the wizzard pleease input the following information</string>
    <string name="fName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="addr1">Address line1</string>
    <string name="addr2">Address line 2</string>
    <string name="zip">Zip code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="birth">dd.mm.yyy</string>
    <string name="nxt">Next</string>
</resources>
